--- a/css/style.css
+++ b/css/style.css
@@ -1090,4 +1090,38 @@ body{
     color: #FF6F61;
 }
 /* about page about banner css end  */
+/* about shop section css start  */
+#about_shop{
+    margin: 100px 0;
+    z-index: 2;
+}
+#about_shop .about_shop_img_shap{
+    position: relative;
+}
+#about_shop .about_shop_img_shap::before{
+    content: '';
+    position: absolute;
+    width: 284px;
+    height: 313px;
+    border: 14px solid #BDBDBD;
+    bottom: -40px;
+    left: -60px;
+    z-index: -1;
+    animation: movingX 5s linear infinite;
+}
+@keyframes movingX {
+    0% {
+     /* -webkit-transform:translateX(0); */
+     transform:translateX(0)
+    }
+    50% {
+     /* -webkit-transform:translateX(50px); */
+     transform:translateX(50px)
+    }
+    100% {
+     /* -webkit-transform:translateX(0); */
+     transform:translateX(0)
+    }
+   }
+/* about shop section css end  */
 /* about page css end  */
