--- a/css/style.css
+++ b/css/style.css
@@ -1580,4 +1580,94 @@ body{
     color: #FF6F61;
 }
 /* shop grid banner css end  */
+/* shop grid products css start  */
+#shop_grid_product{
+    margin-top: 100px;
+}
+#shop_grid_product .shop_grid_product_icon a i{
+    width: 40px;
+    height: 40px;
+    background: #FF6F61;
+    text-align: center;
+    line-height: 40px;
+    color: #ffffff;
+    transition: 0.4s;
+    margin-bottom: 30px;
+}
+#shop_grid_product .shop_grid_product_icon a i:last-child{
+    background: #11161E;
+}
+#shop_grid_product .shop_grid_product_icon .shop_grid_product_text h6{
+    margin-left: 27px;
+}
+#shop_grid_product select{
+    outline: none;
+    cursor: pointer;
+}
+#shop_grid_product .shop_grid_product_img{
+    position: relative;
+}
+#shop_grid_product .shop_grid_product_img .shop_grid_product_icon_btn{
+    position: absolute;
+    top: 0;
+}
+#shop_grid_product .shop_grid_product_img .shop_grid_product_icon .product_btn{
+    display: block;
+    width: 38px;
+    height: 38px;
+    background: #ffffff;
+    text-align: center;
+    line-height: 38px;
+    color: #151A32;
+    border-radius: 50%;
+    margin-bottom: 10px;
+    transition: 0.3s;
+    transform: translateX(40px);
+    opacity: 0;
+    /* visibility: hidden; */
+}
+/* shop grid products css end  */
 /* Shop Grid page css end  */
+
+
+/* #new_products .new_products_slider_item .new_products_icon{
+    position: absolute;
+    top: 40px;
+    left: 220px;
+}
+#new_products .new_products_slider_item .new_products_img .new_products_icon .icon_btn{
+    display: block;
+    width: 38px;
+    height: 38px;
+    background: #ffffff;
+    text-align: center;
+    line-height: 38px;
+    color: #151A32;
+    border-radius: 50%;
+    margin-bottom: 10px;
+    transition: 0.3s;
+    transform: translateX(40px);
+    opacity: 0;
+    visibility: hidden;
+}
+#new_products .new_products_slider_item .new_products_img:hover .new_products_icon .icon_btn{
+    opacity: 1;
+    visibility: visible;
+    transform: translateX(0);
+}
+#new_products .new_products_slider_item .new_products_icon .icon_btn:hover{
+    background: #FF6F61;
+    color: #ffffff;
+}
+#new_products .new_products_slider_item .new_products_img .new_products_icon .icon_btn:nth-child(1){
+    transition-delay: 0s;
+}
+#new_products .new_products_slider_item .new_products_img .new_products_icon .icon_btn:nth-child(2){
+    transition-delay: 0.1s;
+}
+#new_products .new_products_slider_item .new_products_img .new_products_icon .icon_btn:nth-child(3){
+    transition-delay: 0.2s;
+}
+#new_products .new_products_slider_item .new_products_img .new_products_icon .icon_btn:nth-child(4){
+    transition-delay: 0.3s;
+} */
