--- a/css/style.css
+++ b/css/style.css
@@ -1584,6 +1584,9 @@ body{
 #shop_grid_product{
     margin-top: 100px;
 }
+#shop_grid_product .shop_grid_product_item{
+    margin-bottom: 74px;
+}
 #shop_grid_product .shop_grid_product_icon a i{
     width: 40px;
     height: 40px;
@@ -1607,24 +1610,71 @@ body{
 #shop_grid_product .shop_grid_product_img{
     position: relative;
 }
-#shop_grid_product .shop_grid_product_img .shop_grid_product_icon_btn{
+#shop_grid_product .shop_grid_product_img img.tag_2{
     position: absolute;
     top: 0;
+    left: 0;
 }
-#shop_grid_product .shop_grid_product_img .shop_grid_product_icon .product_btn{
+#shop_grid_product .shop_grid_product_img img.new_tag{
+    position: absolute;
+    top: 5px;
+    left: 23px;
+}
+#shop_grid_product .shop_grid_product_img .shop_grid_product_icon_btn{
+    position: absolute;
+    top: 40px;
+    right: 19px;
+}
+#shop_grid_product .shop_grid_product_img .shop_grid_product_icon_btn .product_btn{
     display: block;
-    width: 38px;
-    height: 38px;
-    background: #ffffff;
+    width: 36px;
+    height: 36px;background: #ffffff;
     text-align: center;
-    line-height: 38px;
-    color: #151A32;
+    line-height: 40px;
     border-radius: 50%;
-    margin-bottom: 10px;
-    transition: 0.3s;
-    transform: translateX(40px);
+    background: #151A32;
+    color: #ffffff;
+    transition: 0.4s;
+    transform: translate(30px);
+    margin-bottom: 5px;
     opacity: 0;
-    /* visibility: hidden; */
+    visibility: hidden;
+}
+#shop_grid_product .shop_grid_product_img:hover .shop_grid_product_icon_btn .product_btn{
+    opacity: 1;
+    visibility: visible;
+    transform: translateX(0);
+}
+#shop_grid_product .shop_grid_product_img .shop_grid_product_icon_btn .product_btn:hover{
+    background: #FF6F61;
+}
+#shop_grid_product .shop_grid_product_img .shop_grid_product_icon_btn .product_btn:nth-child(1){
+    transition-delay: 0s;
+}
+#shop_grid_product .shop_grid_product_img .shop_grid_product_icon_btn .product_btn:nth-child(2){
+    transition-delay: 0.1s;
+}
+#shop_grid_product .shop_grid_product_img .shop_grid_product_icon_btn .product_btn:nth-child(3){
+    transition-delay: 0.2s;
+}
+#shop_grid_product .shop_grid_product_img .shop_grid_product_icon_btn .product_btn:nth-child(4){
+    transition-delay: 0.3s;
+}
+#shop_grid_product .shop_grid_product_content h6{
+    font-size: 18px;
+    font-weight: 600;
+    color: #11161E;
+    margin-top: 20px;
+    margin-bottom: 20px;
+}
+#shop_grid_product .shop_grid_product_content h6:last-child{
+    /* margin-right: -48px; */
+    color: #444444;
+}
+#shop_grid_product .shop_grid_product_content .star{
+    color: #FF6F61;
+    margin-top: 17px;
+    /* margin-left: 40px; */
 }
 /* shop grid products css end  */
 /* Shop Grid page css end  */
