--- a/css/style.css
+++ b/css/style.css
@@ -1168,7 +1168,7 @@ body{
     line-height: 14px;
 }
 #about_shop .about_shop_shap{
-    width: 1208px;
+    width: 100%;
     height: 500px;
     background: #F1F3F4;
     position: absolute;
@@ -1636,7 +1636,7 @@ body{
     color: #ffffff;
     transition: 0.4s;
     transform: translate(30px);
-    margin-bottom: 5px;
+    margin-bottom: 10px;
     opacity: 0;
     visibility: hidden;
 }
@@ -1676,48 +1676,19 @@ body{
     margin-top: 17px;
     /* margin-left: 40px; */
 }
-/* shop grid products css end  */
-/* Shop Grid page css end  */
-
-
-/* #new_products .new_products_slider_item .new_products_icon{
-    position: absolute;
-    top: 40px;
-    left: 220px;
+#shop_grid_product nav ul li{
+    margin-right: 10px;
 }
-#new_products .new_products_slider_item .new_products_img .new_products_icon .icon_btn{
-    display: block;
-    width: 38px;
-    height: 38px;
-    background: #ffffff;
-    text-align: center;
-    line-height: 38px;
-    color: #151A32;
-    border-radius: 50%;
-    margin-bottom: 10px;
-    transition: 0.3s;
-    transform: translateX(40px);
-    opacity: 0;
-    visibility: hidden;
+#shop_grid_product nav ul li a{
+    color: #444444;
 }
-#new_products .new_products_slider_item .new_products_img:hover .new_products_icon .icon_btn{
-    opacity: 1;
-    visibility: visible;
-    transform: translateX(0);
-}
-#new_products .new_products_slider_item .new_products_icon .icon_btn:hover{
-    background: #FF6F61;
+#shop_grid_product nav ul li a:hover{
+    background: #11161E;
     color: #ffffff;
 }
-#new_products .new_products_slider_item .new_products_img .new_products_icon .icon_btn:nth-child(1){
-    transition-delay: 0s;
+#shop_grid_product nav ul li.active_pn a{
+    color: #ffffff;
+    background: #11161E;
 }
-#new_products .new_products_slider_item .new_products_img .new_products_icon .icon_btn:nth-child(2){
-    transition-delay: 0.1s;
-}
-#new_products .new_products_slider_item .new_products_img .new_products_icon .icon_btn:nth-child(3){
-    transition-delay: 0.2s;
-}
-#new_products .new_products_slider_item .new_products_img .new_products_icon .icon_btn:nth-child(4){
-    transition-delay: 0.3s;
-} */
+/* shop grid products css end  */
+/* Shop Grid page css end  */
