--- a/css/style.css
+++ b/css/style.css
@@ -832,7 +832,7 @@ body{
 }
 #latest_news .card .card-body h5{
     font-weight: 600;
-    font-size: 18px;
+    font-size: 16px;
     margin-bottom: 20px;
     transition: 0.4s;
 }
@@ -1850,3 +1850,56 @@ body{
 }
 /* shop grid products css end  */
 /* Shop Grid page css end  */
+
+/* Shop Details page css start  */
+   /* shop Details Banner section css start */
+#shop_details_banner{
+    background: url(../img/bg_shop_details.png);
+    background-position: center;
+    background-size: cover;
+    height: 400px;
+    position: relative;
+    z-index: 1;
+}
+#shop_details_banner::before{
+    content: '';
+    position: absolute;
+    inset: 0;
+    background: rgba(0, 0, 0, 0.8);
+    z-index: -1;
+}
+#shop_details_banner .shop_details_banner_content h3{
+    font-size: 46px;
+    color: #ffffff;
+    font-weight: 700;
+    text-transform: capitalize;
+}
+#shop_details_banner .shop_details_banner_content p{
+    font-size: 16px;
+    color: #ffffff;
+    font-weight: 400;
+    word-spacing: 8px;
+    letter-spacing: 2px;
+    text-transform: capitalize;
+}
+#shop_details_banner .shop_details_banner_content p span a{
+    color: #ffffff;
+    transition: 0.5s;
+}
+#shop_details_banner .shop_details_banner_content p span a:hover{
+    color: #FF6F61;
+}
+   /* shop Details Banner section css end */
+   /* shop Details Products Details section css start */
+#product_details .product_details_slider_img{
+    margin-top: 100px;
+    border: 2px solid red;
+    margin-bottom: 30px;
+    z-index: 998;
+}
+#product_details .product_details_slider_nav img{
+    border: 2px solid red;
+    margin-right: 16px;
+}
+   /* shop Details Products Details section css end */
+/* Shop Details page css end  */
