--- a/css/style.css
+++ b/css/style.css
@@ -1893,13 +1893,19 @@ body{
    /* shop Details Products Details section css start */
 #product_details .product_details_slider_img{
     margin-top: 100px;
-    border: 2px solid red;
     margin-bottom: 30px;
     z-index: 998;
 }
-#product_details .product_details_slider_nav img{
-    border: 2px solid red;
-    margin-right: 16px;
+/* #product_details .product_details_slider_nav{
+    margin-right: 20px;
+} */
+#product_details .product_details_slider_nav .product_details_slider_nav_item{
+    margin-right: 40px;
+    margin-left: -40px;
+    transition: 0.3s ease-in-out;
+}
+#product_details .product_details_slider_nav .product_details_slider_nav_item.slick-center{
+    box-shadow: 0px 0px 30px rgba(21,26,50,0.12);
 }
    /* shop Details Products Details section css end */
 /* Shop Details page css end  */
