--- a/css/style.css
+++ b/css/style.css
@@ -1896,9 +1896,6 @@ body{
     margin-bottom: 30px;
     z-index: 998;
 }
-/* #product_details .product_details_slider_nav{
-    margin-right: 20px;
-} */
 #product_details .product_details_slider_nav .product_details_slider_nav_item{
     margin-right: 40px;
     margin-left: -40px;
@@ -1906,6 +1903,149 @@ body{
 }
 #product_details .product_details_slider_nav .product_details_slider_nav_item.slick-center{
     box-shadow: 0px 0px 30px rgba(21,26,50,0.12);
+}
+#product_details .product_details_content{
+    margin-top: 100px;
+}
+#product_details .product_details_content h3{
+    font-size: 36px;
+    font-weight: 700;
+    color: #11161E;
+    text-transform: capitalize;
+    margin-bottom: 22px;
+}
+#product_details .product_details_content .product_rating h6{
+    color: #444444;
+}
+#product_details .product_details_content .product_rating .star{
+    color: #FF6F61;
+    margin: 0 10px;
+    position: relative;
+    top: -5px;
+}
+#product_details .product_details_content .product_rating a{
+    position: relative;
+    top: -5px;
+    font-size: 16px;
+    font-weight: 400;
+    color: #444444;
+    border-left: 1px solid #BDBDBD;
+    padding-left: 10px;
+}
+#product_details .product_details_content .product_price h5{
+    margin-top: 22px;
+    font-size: 20px;
+    font-weight: 600;
+    color: #11161E;
+    margin-right: 21px;
+}
+#product_details .product_details_content .product_price del{
+    position: relative;
+    top: 20px;
+    font-size: 16px;
+    font-weight: 400;
+    color: #444444;
+}
+#product_details .product_details_content p{
+    margin-top: 34px;
+    font-size: 14px;
+    font-weight: 400;
+    color: #444444;
+    text-align: justify;
+    line-height: 28px;
+}
+#product_details .product_details_content hr{
+    margin: 38px 0;
+}
+#product_details .product_details_content .product_selector{
+    margin-bottom: 23px;
+}
+#product_details .product_details_content .product_selector h6{
+    margin-right: 30px;
+    font-size: 18px;
+    font-weight: 600;
+    color: #11161E;
+    text-transform: capitalize;
+    position: relative;
+    top: 10px;
+}
+#product_details .product_details_content .product_selector:last-child h6{
+    margin-right: 20px;
+}
+#product_details .product_details_content .product_quality{
+    margin-top: 45px;
+}
+#product_details .product_details_content .product_quality h6{
+    font-size: 18px;
+    font-weight: 600;
+    color: #11161E;
+    text-transform: capitalize;
+}
+#product_details .product_details_content .product_quality .product_quality_item{
+    margin-top: 20px;
+    position: relative;
+}
+#product_details .product_details_content .product_quality .product_quality_item .qui_btn{
+    background: #ffffff;
+    border: 1px solid #E0E0E0;
+    width: 50px;
+    height: 50px;
+    line-height: 50px;
+    transition: 0.3s;
+}
+#product_details .product_details_content .product_quality .product_quality_item .qui_btn:hover{
+    color: #FF6F61;
+}
+#product_details .product_details_content .product_quality .product_quality_item input{
+    width: 50px;
+    height: 50px;
+    line-height: 50px;
+    text-align: center;
+    background: transparent;
+    border: 1px solid #E0E0E0;
+    border-left: none;
+    border-right: none;
+}
+#product_details .product_details_content .product_quality a{
+    width: 223px;
+    height: 50px;
+    background: #FF6F61;
+    color: #ffffff;
+    padding: 17px 28px;
+    font-size: 16px;
+    font-weight: 600;
+    text-transform: capitalize;
+    position: relative;
+    top: -39px;
+    left: 168px;
+    z-index: 2;
+}
+#product_details .product_details_content .product_quality a i{
+    margin-right: 10px;
+}
+#product_details .product_details_content .product_quality .product_icon{
+    position: absolute;
+    top: -26px;
+    left: 189px;
+}
+#product_details .product_details_content .product_quality .product_icon .icon_btn{
+    display: inline-block;
+    width: 50px;
+    height: 50px;
+    background: #151A32;
+    line-height: 50px;
+    position: absolute;
+    top: -50px;
+    transition: 0.3s;
+    margin-right: 10px;
+}
+#product_details .product_details_content .product_quality .product_icon .icon_btn:hover{
+    background: #FF6F61;
+}
+#product_details .product_details_content .product_quality .product_icon .icon_btn i{
+    position: absolute;
+    top: 16px;
+    left: 20px;
 }
    /* shop Details Products Details section css end */
 /* Shop Details page css end  */
